--- a/assets/CSS/splash.css
+++ b/assets/CSS/splash.css
@@ -1,14 +1,33 @@
-#hashSign {
+@import url('https://fonts.googleapis.com/css?family=Carter+One'); body {
+    font-family: 'Carter One', cursive;
+}
+
+header {
     position: fixed;
-    overflow: hidden;
+    width: 100%;
+}
+
+h1 {
+    -webkit-margin-before: 0;
+            margin-block-start: 0;
+    -webkit-margin-after: 0;
+            margin-block-end: 0;
+    position: absolute;
+    font-size: 10vw;
+    text-shadow: 2px 2px 10px #333;
+    margin-top: 2vw;
+    margin-left: 5.5vw;
+}
+
+#hashSign {
+    position: relative;
+    ; overflow: hidden;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     width: 20%;
-    margin-top: 2vh;
-    margin-left: 2vh;
     padding-top: 20%;
     -webkit-animation: rotation 10s infinite linear;
-            animation: rotation 10s infinite linear;
+    animation: rotation 10s infinite linear;
     border: thin #333 solid;
     border-radius: 50%;
 }
@@ -32,14 +51,12 @@
     animation: initDivH 1s 0s ease-in;
 }
 
-#intDiv001,
-#intDiv002 {
+#intDiv001, #intDiv002 {
     width: 100%;
     height: 15%;
 }
 
-#intDiv003,
-#intDiv004 {
+#intDiv003, #intDiv004 {
     top: 0;
     width: 15%;
     height: 100%;
